Compile with O0 in tests